--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.18",
     "@reduxjs/toolkit": "^2.2.5",
     "next": "14.2.3",
@@ -19,6 +17,7 @@
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.3"
   }
 }
